save the instance state for the detail page fragments